--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 set(CAPRA_SRC_FILES ${CAPRA_SRC_FILES}
+        src/capra/util/noise/perlin.cpp
+        src/capra/util/averagers.cpp
+        src/capra/util/framecounter.cpp
+        src/capra/util/log.cpp
         src/capra/util/rnd.cpp
-
-        src/capra/capra.cpp)
+        src/capra/util/ticker.cpp)
