--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,5 +1,13 @@
 set(CAPRA_INCLUDE_FILES ${CAPRA_INCLUDE_FILES}
+        include/capra/util/noise/perlin.hpp
+        include/capra/util/averagers.hpp
+        include/capra/util/enum_bitops.hpp
+        include/capra/util/framecounter.hpp
+        include/capra/util/log.hpp
+        include/capra/util/platform.hpp
         include/capra/util/rnd.hpp
+        include/capra/util/ticker.hpp
         include/capra/util/time.hpp
 
-        include/capra/capra.hpp)
+        include/capra/capra.hpp
+        include/capra/capra_imconfig.hpp)
