Basic concept of engine--mostly experimentation

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,9 +1,19 @@
 set(CAPRA_INCLUDE_FILES ${CAPRA_INCLUDE_FILES}
+        include/capra/core/module/application.hpp
+        include/capra/core/module/module.hpp
+        include/capra/core/module/window.hpp
+        include/capra/core/engine.hpp
+        include/capra/core/glfw_callbacks.hpp
+        include/capra/core/msg_bus.hpp
+        include/capra/core/msg_data.hpp
+        include/capra/core/msg_def.hxx
+
         include/capra/util/noise/perlin.hpp
         include/capra/util/averagers.hpp
         include/capra/util/enum_bitops.hpp
         include/capra/util/framecounter.hpp
         include/capra/util/log.hpp
+        include/capra/util/overloaded.hpp
         include/capra/util/platform.hpp
         include/capra/util/rnd.hpp
         include/capra/util/ticker.hpp
