--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,14 @@
 set(CAPRA_SRC_FILES ${CAPRA_SRC_FILES}
         src/capra/core/module/application.cpp
+        src/capra/core/module/glcontext.cpp
         src/capra/core/module/inputmgr.cpp
         src/capra/core/module/module.cpp
         src/capra/core/module/window.cpp
         src/capra/core/engine.cpp
         src/capra/core/glfw_callbacks.cpp
         src/capra/core/msg_bus.cpp
+
+        src/capra/gfx/color.cpp
 
         src/capra/util/noise/perlin.cpp
         src/capra/util/averagers.cpp
